--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -1,11 +1,21 @@
 #summary This is screenshots of wxGIS components.
 
 = ScreenShots =
+ * [wxGIS Catalog]
+ * [wxGIS Toolbox]
 
 This is screenshots of wxGIS components
 
 = wxGIS Catalog =
+http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/logo_catalog.png 
 
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS[catalog]1.jpg </p>
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS[catalog]2.jpg </p>
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS[catalog]3.jpg </p>
+
+= wxGIS Toolbox =
+http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/logo_toolbox.png
+
+<p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS(toolbox)1.jpg </p>
+<p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS(toolbox)2.jpg 
+http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/wxGIS(toolbox)3.jpg </p>
