--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -1,8 +1,8 @@
 #summary This is screenshots of wxGIS components.
 
 = ScreenShots =
- * [wxGIS Catalog]
- * [wxGIS Toolbox]
+ * [ScreenShots#wxGIS Catalog]
+ * [ScreenShots#wxGIS Toolbox]
 
 This is screenshots of wxGIS components
 
