--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -1,8 +1,8 @@
 #summary This is screenshots of wxGIS components.
 
 = ScreenShots =
- * [ScreenShots#wxGIS_Catalog]
- * [ScreenShots#wxGIS_Toolbox]
+ * [ScreenShots#wxGIS_Catalog wxGIS Catalog]
+ * [ScreenShots#wxGIS_Toolbox wxGIS Toolbox]
 
 This is screenshots of wxGIS components
 
