Edited wiki page ScreenShots through web user interface.

--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -1,4 +1,5 @@
 #summary This is screenshots of wxGIS components.
+#labels Featured,Phase-Design
 
 = ScreenShots =
  * [ScreenShots#wxGIS_Catalog wxGIS Catalog]
