Edited wiki page Linux_install through web user interface.

--- a/wiki/Linux_install.wiki
+++ b/wiki/Linux_install.wiki
@@ -11,3 +11,18 @@ To instal wxGIS on Ubuntu your need:
   * Add new source in your sources list (deb http://ppa.launchpad.net/bishop-gis/wxgis/ubuntu lucid main )
   * Update package manager
   * Install package wxgis0
+
+To instal wxGIS from sources your need:
+  * Download and unpack wxgis-version.tar.gz
+  * cd to unpacked directory
+  * run:
+{{{
+make lib
+sudo make install_lib
+make app
+sudo make install_ap
+}}}
+  
+Before your run:
+  * Install wxGISGDAL
+  * Look carefully install paths in Makefile, ./build/make/makefie * /build/make/*mak and fix them if needed
