--- a/wiki/Linux_install.wiki
+++ b/wiki/Linux_install.wiki
@@ -7,12 +7,12 @@ This topic describes Linux install. There is the Ubuntu package on PPA now (http
 
 = Details =
 
-To instal wxGIS on Ubuntu your need:
+*To instal wxGIS on Ubuntu your need:*
   * Add new source in your sources list (deb http://ppa.launchpad.net/bishop-gis/wxgis/ubuntu lucid main )
   * Update package manager
   * Install package wxgis0
 
-To instal wxGIS from sources your need:
+*To instal wxGIS from sources your need:*
   * Download and unpack wxgis-version.tar.gz
   * cd to unpacked directory
   * run:
@@ -25,4 +25,4 @@ sudo make install_ap
   
 Before your run:
   * Install wxGISGDAL
-  * Look carefully install paths in Makefile, ./build/make/makefie * /build/make/*mak and fix them if needed
+  * Look carefully install paths in Makefile, ./build/make/makefie ./build/make/`*`.mak and fix them if needed
