Edited wiki page CreateLocaleFiles through web user interface.

--- a/wiki/CreateLocaleFiles.wiki
+++ b/wiki/CreateLocaleFiles.wiki
@@ -3,17 +3,18 @@
 
 = Introduction =
 
-The 0.3 version of wxGIS introduce new and more simple mecanism of changing application localization (see [Localization] page). This page describe the locale files create process.
+The 0.3 version of wxGIS introduce new and more simple mechanism of changing application localization (see [Localization] page). This page describe the locale files create process.
 
 
 = Details =
 
-From the begining to create locale files you need:
+From the beginning to create locale files you need:
   # Download and install poEdit (http://www.poedit.net/download.php)
-  # Download sources (http://code.google.com/p/wxgis/source/checkout), there are several tags for diferent versions of wxGIS (see http://wxgis.googlecode.com/svn/tags/). For Microsoft Windows I recomend TortoiseSVN, for Ubuntu - RabbitSVN.
+  # Download sources (http://code.google.com/p/wxgis/source/checkout), there are several tags for different versions of wxGIS (see http://wxgis.googlecode.com/svn/tags/). For Microsoft Windows I recommend TortoiseSVN, for Ubuntu - RabbitSVN.
 
-The next step is creating catalog for each part of wxGIS (recomended) but you can combine all tranclations in one big file.
-To do it you should run poEdit and click File->New catalog...
+The next step is creating catalog for each part of wxGIS (recommended) but you can combine all translations in one big file.
+
+To create a translation you have to run poEdit and click File->New catalog...
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/create_cat.png</p>
 
 Set your name and email
@@ -25,22 +26,22 @@ Set paths. At least you have to add one path to directory in src folder and one 
 Save catalog in loc/your_locale (eg. English - loc/en, Russian - /loc/ru etc.) and with name ended *_cat.po (see picture). The wxGISCatalog search it's locale files using this mask.
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/cat_save_dlg.png</p>
 
-The next step the main window should be shown and filled text string to translate.
+The main window should be shown and filled with text string to translate at next step.
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/main_wnd.png</p>
 
-To control translation you can create catalog set in catalog manager. In catalog set should be shown all translations and theirs state. If you update sorces you'l see changes in catalog manager.
+To control translation you can create a project in catalogs manager. In translation project should be shown all translations and theirs state. If you update sources you’ll see changes in catalog manager.
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/manager.png</p>
 
-To create catalog set push first button in catalog manager and fill dialog.
+To create translation project push first button in catalog manager and fill dialog.
 <p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/edit_project.png</p>
 
-After the translation you can test the result on your wxGISCatalog. To do it:
-- create in folder there wxGISCatalog.exe is situated subfolder locale (if it's not present)
-- create subfolder with your locale in locale folder (eg. locale/en).
+After the translation you can test the result on your wxGISCatalog installation. To do it:
+- create in folder there wxGISCatalog.exe is situated sub-folder named "locale" (if it's not present)
+- create sub-folder with your locale in locale folder (eg. locale/en).
 - copy all *.mo files to this folder.
-- follow instructions of [Localization] page. 
+- follow instructions of [Localization] page.
 
-*Also you can get locale files from other language and copy them to your language folder* (for example, from ...wxGIS\loc\ru to ...wxGIS\loc\en).
-Than you can create catalog set as it was written upper and set new paths to that files in each catalog configs and rewrite locale strings to your language.
+*If you don't want to create numerous catalogs – also you can get locale files from other language and copy them to your language folder* (for example, from ...wxGIS\loc\ru to ...wxGIS\loc\en).
+Than you can create translation project as it was written upper and set new paths to that files in each catalog configures and rewrite locale strings to your language.
 
-Please send me your translations to put them into the distro of wxGIS!
+*Please send me your translations to put them into the distributive of wxGIS!*
