--- a/loc/cs/srv_auth.po
+++ b/loc/cs/srv_auth.po
@@ -1,18 +1,19 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: wxGIS\n"
+"Project-Id-Version: wxGIS 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-21 22:11+0300\n"
-"PO-Revision-Date: 2011-04-16 22:26+0100\n"
+"POT-Creation-Date: 2011-06-15 21:16+0100\n"
+"PO-Revision-Date: 2011-06-15 21:16+0100\n"
 "Last-Translator: Jan Helebrant <jhelebrant@seznam.cz>\n"
-"Language-Team: Juhele <www.juhele.webnode.cz>\n"
+"Language-Team: Juhele <jan.helebrant@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
-"X-Poedit-Basepath: .\n"
+"X-Poedit-Basepath: .C:\\Documents and Settings\\Honza\\Plocha\\Qt Linguist\\WXGIS\\src\\loc\n"
 "X-Poedit-Language: Czech\n"
 "X-Poedit-Country: CZECH REPUBLIC\n"
-"X-Poedit-SearchPath-0: D:\\work\\Projects\\wxGIS\\include\\wxgissrv\\srv_auth\n"
-"X-Poedit-SearchPath-1: D:\\work\\Projects\\wxGIS\\src\\srv_auth\n"
+"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-SearchPath-0: C:\\Documents and Settings\\Honza\\Plocha\\Qt Linguist\\WXGIS\\src\\include\\wxgis\n"
+"X-Poedit-SearchPath-1: C:\\Documents and Settings\\Honza\\Plocha\\Qt Linguist\\WXGIS\\src\\src\\srv_auth\n"
 
