Edited wiki page TranslateLocaleFiles through web user interface.

--- a/wiki/TranslateLocaleFiles.wiki
+++ b/wiki/TranslateLocaleFiles.wiki
@@ -1,13 +1,21 @@
-#summary One-sentence summary of this page.
+#summary This page describes translating locale files for wxGIS.
+#labels Phase-Design
 
 = Introduction =
 
-Add your content here.
-
+The 0.3 version of wxGIS introduce new and more simple mechanism of changing application localization (see [Localization] page). I provide now the empty locale files (ctalogs), so anybody can translate them.
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+From the beginning to create locale files you need:
+  # Download and install poEdit (http://www.poedit.net/download.php)
+  # Download from download page archive of empty locale project files to translate of special wxGIS version (eg. 0.4)
+
+After downloading empty locale project files, you have to extract them to some folder (preferable your language two letter code, eg. 'ru' or 'en').
+
+You need to create a project in catalogs manager. 
+To create translation project push first button in catalog manager and fill dialog.
+<p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/edit_project.png</p>
+You should put the path where you extract empty locale project files. Then you push OK button the translation project should be shown all translations and theirs state. 
+<p>http://wxgis.googlecode.com/svn/wiki/WikiPageName.attach/manager.png</p>
+Double clicking of each catalog (transation) will show dialog where you can put translated strings.
